temp bugfix for too small models on phone

--- a/src/website/client/css/Default.css
+++ b/src/website/client/css/Default.css
@@ -19,3 +19,8 @@
     margin-top: 10px;
 }
 
+@media (max-width: 920px) {
+    .modal-dialog {
+        width: 100%;
+    }
+}
